// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TaskForm > renders correctly for create (snapshot) 1`] = `
<DocumentFragment>
  <form
    class="bg-white p-4 rounded-lg shadow border border-gray-200"
  >
    <div
      class="grid gap-4"
    >
      <div>
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
        >
          Title
        </label>
        <input
          class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
          required=""
          type="text"
          value=""
        />
      </div>
      <div>
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
        >
          Description
        </label>
        <textarea
          class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
          rows="2"
        />
      </div>
      <div
        class="grid grid-cols-2 gap-4"
      >
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
          >
            Due Date
          </label>
          <input
            class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
            type="datetime-local"
            value=""
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
          >
            Assign To
          </label>
          <select
            class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
          >
            <option
              value=""
            >
              Anyone
            </option>
            <option
              value="1"
            >
              User 1
            </option>
            <option
              value="2"
            >
              User 2
            </option>
          </select>
        </div>
      </div>
      <div>
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
        >
          Recurrence
        </label>
        <select
          class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
        >
          <option
            value=""
          >
            None
          </option>
          <option
            value="DAILY"
          >
            Daily
          </option>
          <option
            value="WEEKLY"
          >
            Weekly
          </option>
          <option
            value="MONTHLY"
          >
            Monthly
          </option>
        </select>
      </div>
      <div
        class="flex gap-2 justify-end mt-4"
      >
        <button
          class="px-4 py-2 border rounded-md hover:bg-gray-50"
          type="button"
        >
          Cancel
        </button>
        <button
          class="px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600"
          type="submit"
        >
          Create Task
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TaskForm > renders correctly for edit (snapshot) 1`] = `
<DocumentFragment>
  <form
    class="bg-white p-4 rounded-lg shadow border border-gray-200"
  >
    <div
      class="grid gap-4"
    >
      <div>
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
        >
          Title
        </label>
        <input
          class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
          required=""
          type="text"
          value="Existing Task"
        />
      </div>
      <div>
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
        >
          Description
        </label>
        <textarea
          class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
          rows="2"
        >
          Existing Description
        </textarea>
      </div>
      <div
        class="grid grid-cols-2 gap-4"
      >
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
          >
            Due Date
          </label>
          <input
            class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
            type="datetime-local"
            value="2025-01-02T10:00"
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
          >
            Assign To
          </label>
          <select
            class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
          >
            <option
              value=""
            >
              Anyone
            </option>
            <option
              value="1"
            >
              User 1
            </option>
            <option
              value="2"
            >
              User 2
            </option>
          </select>
        </div>
      </div>
      <div>
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
        >
          Recurrence
        </label>
        <select
          class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
        >
          <option
            value=""
          >
            None
          </option>
          <option
            value="DAILY"
          >
            Daily
          </option>
          <option
            value="WEEKLY"
          >
            Weekly
          </option>
          <option
            value="MONTHLY"
          >
            Monthly
          </option>
        </select>
      </div>
      <div
        class="flex gap-2 justify-end mt-4"
      >
        <button
          class="px-4 py-2 border rounded-md hover:bg-gray-50"
          type="button"
        >
          Cancel
        </button>
        <button
          class="px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600"
          type="submit"
        >
          Update Task
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
